[tool.poetry]
name = "AdeptML"
version = "2.0"
description = "A High-Level PyTorch based Library for Hybrid Physics-Informed Machine Learning Models"
authors = ["Manaswin Oddiraju"]
readme = "README.md"
packages = [{include="adeptml"}]

[tool.poetry.dependencies]
python =">=3.9.0"
torch = "^2.1.0"
joblib = "^1.3.2"
tensorboard = "^2.16.2"
Sphinx = { version = "7.3.7", optional = true }
sphinx-rtd-theme = { version = "2.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
