[tool.poetry]
name = "hypyml"
version = "0.2"
description = "A High-Level PyTorch and JAX based Library for Hybrid Physics-Informed Machine Learning Models"
authors = ["ManaswinOddiraju"]

[tool.poetry.dependencies]
python =">=3.9.0,<3.13"
torch = "^2.1.0"
jax = "^0.4.18"
joblib = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
